Fixed scrollbar background color

--- a/Resources/Themes/Frontend/BootstrapBare/frontend/_public/src/less/_components/scrollpane.less
+++ b/Resources/Themes/Frontend/BootstrapBare/frontend/_public/src/less/_components/scrollpane.less
@@ -19,7 +19,7 @@
     right: 0;
     .unitize-width(@swf-scrollbar-ajax-cart-width);
     height: 100%;
-    background: @swf-brand-primary;
+    background: @swf-gray-light;
     .jspArrow {
         .unitize-height(@swf-scrollbar-ajax-cart-width);
         &:focus {
